# llm_engineering

./: .env.example  README.md  pyproject.toml
week1/: day1.ipynb  day2.ipynb  day5.ipynb  intermediate_python.ipynb  week1_excercise.ipynb
week2/: day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  week2Ex.ipynb
week3/: day1.ipynb  day1_explanation.md  day2.ipynb  day2_explanation.md  day3.ipynb  day3_explanation.md  day4.ipynb  day4_explanation.md  day5.ipynb  day5_explanation.md
week4/: day3.ipynb  optimized.cpp
