[project]
name = "llm-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.1",
    "diffusers>=0.33.1",
    "dotenv>=0.9.9",
    "hf-xet>=1.1.0",
    "huggingface-hub>=0.30.2",
    "iprogress>=0.4",
    "ipython>=9.1.0",
    "ipywidgets>=8.1.7",
    "notebook>=7.4.0",
    "pip>=25.0.1",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
    "transformers>=4.51.3",
]

default = true
